--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -351,47 +351,49 @@
                     <li x-data="{open: <?=$nav5Active; ?>}">
                         <a href="#" x-on:click="open = !open; $event.preventDefault();">Reference</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
-                            <li><a href="#">pop-acl</a></li>
-                            <li><a href="#">pop-application</a></li>
-                            <li><a href="#">pop-audit</a></li>
-                            <li><a href="#">pop-auth</a></li>
-                            <li><a href="#">pop-cache</a></li>
-                            <li><a href="#">pop-code</a></li>
-                            <li><a href="#">pop-color</a></li>
-                            <li><a href="#">pop-config</a></li>
-                            <li><a href="#">pop-console</a></li>
-                            <li><a href="#">pop-controller</a></li>
-                            <li><a href="#">pop-cookie</a></li>
-                            <li><a href="#">pop-css</a></li>
-                            <li><a href="#">pop-csv</a></li>
-                            <li><a href="#">pop-db</a></li>
-                            <li><a href="#">pop-debug</a></li>
-                            <li><a href="#">pop-dir</a></li>
-                            <li><a href="#">pop-dom</a></li>
-                            <li><a href="#">pop-event</a></li>
-                            <li><a href="#">pop-filter</a></li>
-                            <li><a href="#">pop-form</a></li>
-                            <li><a href="#">pop-ftp</a></li>
-                            <li><a href="#">pop-http</a></li>
-                            <li><a href="#">pop-i18n</a></li>
-                            <li><a href="#">pop-image</a></li>
-                            <li><a href="#">pop-kettle</a></li>
-                            <li><a href="#">pop-log</a></li>
-                            <li><a href="#">pop-mail</a></li>
-                            <li><a href="#">pop-mime</a></li>
-                            <li><a href="#">pop-module</a></li>
-                            <li><a href="#">pop-nav</a></li>
-                            <li><a href="#">pop-paginator</a></li>
-                            <li><a href="#">pop-pdf</a></li>
-                            <li><a href="#">pop-queue</a></li>
-                            <li><a href="#">pop-router</a></li>
-                            <li><a href="#">pop-service</a></li>
-                            <li><a href="#">pop-session</a></li>
-                            <li><a href="#">pop-storage</a></li>
-                            <li><a href="#">pop-utils</a></li>
-                            <li><a href="#">pop-validator</a></li>
-                            <li><a href="#">pop-view</a></li>
-                            <li><a href="#">popcorn</a></li>
+                            <li><a href="https://github.com/popphp/pop-acl#readme" target="_blank">pop-acl</a></li>
+                            <li><a href="https://github.com/popphp/popphp/#applications" target="_blank">pop-application</a></li>
+                            <li><a href="https://github.com/popphp/pop-audit#readme" target="_blank">pop-audit</a></li>
+                            <li><a href="https://github.com/popphp/pop-auth#readme" target="_blank">pop-auth</a></li>
+                            <li><a href="https://github.com/popphp/pop-cache#readme" target="_blank">pop-cache</a></li>
+                            <li><a href="https://github.com/popphp/pop-code#readme" target="_blank">pop-code</a></li>
+                            <li><a href="https://github.com/popphp/pop-color#readme" target="_blank">pop-color</a></li>
+                            <li><a href="https://github.com/popphp/pop-config#readme" target="_blank">pop-config</a></li>
+                            <li><a href="https://github.com/popphp/pop-console#readme" target="_blank">pop-console</a></li>
+                            <li><a href="https://github.com/popphp/popphp/#controllers" target="_blank">pop-controller</a></li>
+                            <li><a href="https://github.com/popphp/pop-cookie#readme" target="_blank">pop-cookie</a></li>
+                            <li><a href="https://github.com/popphp/pop-css#readme" target="_blank">pop-css</a></li>
+                            <li><a href="https://github.com/popphp/pop-csv#readme" target="_blank">pop-csv</a></li>
+                            <li><a href="https://github.com/popphp/pop-db#readme" target="_blank">pop-db</a></li>
+                            <li><a href="https://github.com/popphp/pop-debug#readme" target="_blank">pop-debug</a></li>
+                            <li><a href="https://github.com/popphp/pop-dir#readme" target="_blank">pop-dir</a></li>
+                            <li><a href="https://github.com/popphp/pop-dom#readme" target="_blank">pop-dom</a></li>
+                            <li><a href="https://github.com/popphp/popphp/#event-manager" target="_blank">pop-event</a></li>
+                            <li><a href="https://github.com/popphp/pop-filter#readme" target="_blank">pop-filter</a></li>
+                            <li><a href="https://github.com/popphp/pop-form#readme" target="_blank">pop-form</a></li>
+                            <li><a href="https://github.com/popphp/pop-ftp#readme" target="_blank">pop-ftp</a></li>
+                            <li><a href="https://github.com/popphp/pop-http#readme" target="_blank">pop-http</a></li>
+                            <li><a href="https://github.com/popphp/pop-i18n#readme" target="_blank">pop-i18n</a></li>
+                            <li><a href="https://github.com/popphp/pop-image#readme" target="_blank">pop-image</a></li>
+                            <li><a href="https://github.com/popphp/pop-kettle#readme" target="_blank">pop-kettle</a></li>
+                            <li><a href="https://github.com/popphp/pop-log#readme" target="_blank">pop-log</a></li>
+                            <li><a href="https://github.com/popphp/pop-mail#readme" target="_blank">pop-mail</a></li>
+                            <li><a href="https://github.com/popphp/pop-mime#readme" target="_blank">pop-mime</a></li>
+                            <li><a href="https://github.com/popphp/popphp/#models" target="_blank">pop-model</a></li>
+                            <li><a href="https://github.com/popphp/popphp/#modules" target="_blank">pop-module</a></li>
+                            <li><a href="https://github.com/popphp/pop-nav#readme" target="_blank">pop-nav</a></li>
+                            <li><a href="https://github.com/popphp/pop-paginator#readme" target="_blank">pop-paginator</a></li>
+                            <li><a href="https://github.com/popphp/pop-pdf#readme" target="_blank">pop-pdf</a></li>
+                            <li><a href="https://github.com/popphp/pop-queue#readme" target="_blank">pop-queue</a></li>
+                            <li><a href="https://github.com/popphp/popphp/#router" target="_blank">pop-router</a></li>
+                            <li><a href="https://github.com/popphp/popphp/#service-locator" target="_blank">pop-service</a></li>
+                            <li><a href="https://github.com/popphp/pop-session#readme" target="_blank">pop-session</a></li>
+                            <li><a href="https://github.com/popphp/pop-storage#readme" target="_blank">pop-storage</a></li>
+                            <li><a href="https://github.com/popphp/pop-utils#readme" target="_blank">pop-utils</a></li>
+                            <li><a href="https://github.com/popphp/pop-validator#readme" target="_blank">pop-validator</a></li>
+                            <li><a href="https://github.com/popphp/pop-view#readme" target="_blank">pop-view</a></li>
+                            <li><a href="https://github.com/popphp/popcorn#readme" target="_blank">popcorn</a></li>
+                            <li><a href="https://github.com/popphp/popphp#readme" target="_blank">popphp</a></li>
                         </ul>
                     </li>
                     <li><a href="http://api.popphp.org/5.0/" target="_blank">API Docs</a></li>
@@ -399,10 +401,6 @@
                         <a href="/changelog">Changelog</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
                             <li><a href="/changelog#5.0.0">5.0.0</a></li>
-                            <li><a href="/changelog#4.8.0">4.8.0</a></li>
-                            <li><a href="/changelog#4.7.0">4.7.0</a></li>
-                            <li><a href="/changelog#4.6.0">4.6.0</a></li>
-                            <li><a href="/changelog#4.5.0">4.5.0</a></li>
                         </ul>
                     </li>
                 </ul>
