--- a/app/view/user-guide/mvc.phtml
+++ b/app/view/user-guide/mvc.phtml
@@ -49,7 +49,7 @@ endif; ?>
                     </ul>
                     <h4 id="views">Views</h4>
                     <p>The <code class="inline-code">popphp/pop-view</code> component provides the functionality for creating and rendering views.
-                        The topic of views will be covered more in-depth in the next section of the user guide, <a href="/user-guide/views">Views</a>.
+                        The topic of views will be covered more in-depth in the next section of the user guide, <a href="<?=$version; ?>/user-guide/views">Views</a>.
                         But for now, know that the view component supports both file-based templates and string or
                         stream-based templates. Data can be pushed into and retrieved from a view object and a template
                         can be set in which the data will be rendered. A basic example would be:</p>
@@ -66,7 +66,7 @@ echo $view;</code><a href="#" title="Copy" class="copy-link" onclick="copyCode(t
                         needed for your application. The abstract model class is a simple and bare-bones data object that
                         can be extended with whatever methods or properties you need to work with your model. Data from
                         the abstract model object is accessible via array access and magic methods, and the model object
-                        is countable and iterable. You can reference <a href="/getting-started/models">Models in Getting Started</a>
+                        is countable and iterable. You can reference <a href="<?=$version; ?>/getting-started/models">Models in Getting Started</a>
                         to see a simple example.</p>
 
                     <p>More in-depth examples connecting all of these concepts will be covered later in the user guide.</p>
