--- a/app/view/inc/header.phtml
+++ b/app/view/inc/header.phtml
@@ -22,7 +22,7 @@
 <body x-data :class="$store.darkMode.on && 'dark'" x-cloak class="text-gray-900 antialiased">
     <div class="flex flex-col h-screen">
         <header class="sticky top-0 z-40 w-full pt-6 pb-6 pl-4 pr-4 h-20 flex-none bg-white border-b border-solid border-b-gray-300 dark:bg-gray-950 dark:text-white dark:border-b dark:border-b-gray-700">
-            <a class="nav-icon hidden float-right p-1 bg-white border border-solid border-gray-200 text-gray-600 hover:text-gray-400 rounded-md dark:bg-gray-700 dark:text-gray-200 dark:border-none" href="#" onclick="toggleSidebar('#sidebar'); return false;">
+            <a class="nav-icon hidden float-right p-1 bg-white border border-solid border-gray-200 text-gray-600 hover:text-gray-400 rounded-md dark:bg-gray-700 dark:text-gray-200 dark:border-none dark:hover:text-gray-400" href="#" onclick="toggleSidebar('#sidebar'); return false;">
                 <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                 </svg>
@@ -35,7 +35,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
                 </svg>
             </a>
-            <form method="get" action="<?=$version; ?>/search">
+            <form method="get" action="/search">
                 <div class="float-right w-48 relative">
                     <span class="absolute left-0 mt-1">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -43,6 +43,7 @@
                         </svg>
                     </span>
                     <input type="text" name="query" class="text-gray-600 search text-sm pt-2 pb-2 pr-4 pl-12 mr-4 float-right bg-gray-200 rounded-full h-8 dark:bg-gray-600 dark:text-gray-200" size="12" placeholder="Search"/>
+                    <input type="hidden" name="version" value="<?=$version; ?>" />
                 </div>
             </form>
             <a class="home" href="<?=$version; ?>/"><h1>Pop PHP Framework</h1></a>
