--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -409,5 +409,6 @@
                             <li><a href="<?=$version; ?>/changelog#4.0.0">4.0.0</a></li>
                         </ul>
                     </li>
+                    <li><a href="https://pop-php-framework.readthedocs.io/en/latest/" target="_blank">Legacy Docs</a></li>
                 </ul>
             </aside>
