--- a/app/resources/css/app.css
+++ b/app/resources/css/app.css
@@ -133,16 +133,21 @@ pre > code {
     @apply absolute top-2 right-2 pl-1 pt-1 w-8 h-8 rounded-md float-right text-gray-200 bg-gray-600 hover:text-gray-200 hover:bg-gray-900 active:bg-blue-500 dark:text-gray-200 dark:hover:text-gray-200
 }
 
+.search-form > div {
+    position: relative;
+    margin-left: 2rem;
+    float: right;
+    width: 12rem;
+}
+
+.search-input {
+    @apply text-gray-600 search text-sm pt-2 pb-2 pr-4 pl-12 mr-4 float-right bg-gray-200 rounded-full h-8 dark:bg-gray-600 dark:text-gray-200
+}
+
 .search, .search:focus {
     width: 190px;
     border: none;
     outline: none;
-}
-
-.search:before {
-    content: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600"%3E%3Cpath stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" /%3E%3C/svg%3E');
-    width: 24px;
-    height: 24px;
 }
 
 .syntax-table {
@@ -197,6 +202,23 @@ pre > code {
 
     h4 {
         @apply pt-2 pb-2 text-xl text-gray-600 font-bold dark:text-gray-200
+    }
+
+    .search-form > div {
+        position: relative;
+        margin-left: 1.5rem;
+        float: right;
+        width: 9rem;
+    }
+
+    .search-input {
+        @apply text-gray-600 search text-xs pt-2 pb-2 pr-4 pl-10 mr-2 float-right bg-gray-200 rounded-full h-8 dark:bg-gray-600 dark:text-gray-200
+    }
+
+    .search, .search:focus {
+        width: 150px;
+        border: none;
+        outline: none;
     }
 
 }
