--- a/app/view/inc/header.phtml
+++ b/app/view/inc/header.phtml
@@ -35,17 +35,24 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
                 </svg>
             </a>
-            <form method="get" action="/search">
-                <div class="float-right w-48 relative">
+            <form class="search-form" method="get" action="/search">
+                <div>
                     <span class="absolute left-0 mt-1">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
                         </svg>
                     </span>
-                    <input type="text" name="query" class="text-gray-600 search text-sm pt-2 pb-2 pr-4 pl-12 mr-4 float-right bg-gray-200 rounded-full h-8 dark:bg-gray-600 dark:text-gray-200" size="12" placeholder="Search"/>
+                    <input type="text" name="query" class="search search-input" placeholder="Search"/>
                     <input type="hidden" name="version" value="<?=$version; ?>" />
                 </div>
             </form>
+<?php if (!empty($versions)): ?>
+            <select name="version_select" id="version-select" class="float-right rounded-full text-sm pt-2 pb-2 pr-2 pl-4" x-on:change="changeVersion()">
+<?php foreach ($versions as $versionUrl => $versionValue): ?>
+                <option value="<?=$versionUrl; ?>"<?=($version == $versionUrl) ? ' selected="selected"' : '';?>><?=$versionValue; ?></option>
+<?php endforeach; ?>
+            </select>
+<?php endif; ?>
             <a class="home" href="<?=$version; ?>/"><h1>Pop PHP Framework</h1></a>
         </header>
         <div class="flex flex-1 overflow-hidden">
