--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -1,5 +1,5 @@
             <aside x-data id="sidebar" :style="{left: $store.navigationOpen ? '0px' : '-280px'}" class="col-left bg-gray-200 pl-8 pr-8 pt-2 pb-2 overflow-y-auto dark:bg-gray-950">
-                <ul class="side-nav" x-init="setActiveNav();">
+                <ul class="side-nav" x-data="manageNav" x-init="setActiveNav()">
                     <li x-data="{open: <?=$nav1Active; ?>}">
                         <a href="#" x-on:click.prevent="open = !open;">Overview</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
