--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -241,6 +241,37 @@
                                     <li><a href="<?=$version; ?>/user-guide/databases#profiler">Profiler</a></li>
                                 </ul>
                             </li>
+
+                            <li>
+                                <a href="<?=$version; ?>/user-guide/mail">Mail</a>
+                                <ul class="hidden">
+                                    <li><a href="<?=$version; ?>/user-guide/mail#quickstart">Quickstart</a></li>
+                                    <li><a href="<?=$version; ?>/user-guide/mail#messages">Messages</a></li>
+                                    <li><a href="<?=$version; ?>/user-guide/mail#mailer">Mailer</a></li>
+                                    <li>
+                                        <a href="<?=$version; ?>/user-guide/mail#transports">Transports</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#mailgun">Mailgun</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#sendgrid">Sendgrid</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#office-365-transport">Office 365</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#aws-ses">AWS SES</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#google-transport">Google</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#smtp">SMTP</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#sendmail">Sendmail</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="<?=$version; ?>/user-guide/mail#clients">Clients</a>
+                                        <ul class="ml-4 pt-2 pb-1">
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#office-365-client">Office 365</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#google-client">Google</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/mail#imap-pop3">IMAP/POP3</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="<?=$version; ?>/user-guide/mail#mail-queues">Mail Queues</a></li>
+                                    <li><a href="<?=$version; ?>/user-guide/mail#saving-mail">Saving Mail</a></li>
+                                </ul>
+                            </li>
                             <li>
                                 <a href="<?=$version; ?>/user-guide/sessions">Sessions</a>
                                 <ul class="hidden">
