Update community docs

--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -427,7 +427,7 @@
                             <li><a href="https://github.com/popphp/popphp#readme" target="_blank">popphp</a></li>
                         </ul>
                     </li>
-                    <li><a href="http://api.popphp.org/5.0/" target="_blank">API Docs</a></li>
+                    <li><a href="https://api.popphp.org/5.0/" target="_blank">API Docs</a></li>
                     <li x-data="{open: <?=$nav6Active; ?>}">
                         <a href="<?=$version; ?>/changelog">Changelog</a>
                         <ul x-show="open" x-transition:enter.duration.200ms x-transition:leave.duration.200ms x-cloak>
