--- a/app/view/overview/community.phtml
+++ b/app/view/overview/community.phtml
@@ -19,9 +19,10 @@ endif; ?>
                     <ul class="list-disc ml-8 text-sm">
                         <li class="mb-2"><a href="https://x.com/popphpframework" target="_blank">X.com</a></li>
                     </ul>
-                    <h6>API Documentation</h6>
+                    <h6>Documentation</h6>
                     <ul class="list-disc ml-8 text-sm">
-                        <li class="mb-2"><a href="http://api.popphp.org/5.0/" target="_blank">API documentation</a></li>
+                        <li class="mb-2"><a href="https://api.popphp.org/5.0/" target="_blank">API documentation</a></li>
+                        <li class="mb-2"><a href="https://www.popphp.org/" target="_blank">Website</a></li>
                     </ul>
                 </div>
 <?php include __DIR__ . '/../inc/footer.phtml'; ?>
