--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -198,6 +198,7 @@
                                             <li class="mb-2"><a href="<?=$version; ?>/user-guide/databases#options">Options</a></li>
                                             <li class="mb-2"><a href="<?=$version; ?>/user-guide/databases#shorthand-syntax">Shorthand Syntax</a></li>
                                             <li class="mb-2"><a href="<?=$version; ?>/user-guide/databases#execute-queries">Execute Queries</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/databases#active-record-transactions">Transactions</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -210,6 +211,7 @@
                                         <a href="<?=$version; ?>/user-guide/databases#querying">Querying</a>
                                         <ul class="ml-4 pt-2 pb-1">
                                             <li class="mb-2"><a href="<?=$version; ?>/user-guide/databases#prepared-statements">Prepared Statements</a></li>
+                                            <li class="mb-2"><a href="<?=$version; ?>/user-guide/databases#query-transactions">Transactions</a></li>
                                         </ul>
                                     </li>
                                     <li>
