--- a/app/view/user-guide/databases.phtml
+++ b/app/view/user-guide/databases.phtml
@@ -272,7 +272,7 @@ $user->delete();</code><a href="#" title="Copy" class="copy-link" x-data="copyCo
                         PDO extension and its various available drivers.</p>
                     <h4 id="orm">ORM</h4>
                     <p>The main concept of the <code class="inline-code">pop-db</code> component is that of ORM - object relational mapping. This means
-                        that all of complex things that make databases work - connections, SQL queries, etc. - are abstracted
+                        that all of the complex things that make databases work - connections, SQL queries, etc. - are abstracted
                         away so the developer only has to worry about interacting with objects in PHP. The rest is handled
                         for you, under the hood, in a secure and efficient manner.
 
